lib/synurang_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT
// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// FFI bindings for Synurang
class SynurangBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SynurangBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SynurangBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int StartGrpcServer(
    CoreArgument cArg,
  ) {
    return _StartGrpcServer(
      cArg,
    );
  }

  late final _StartGrpcServerPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(CoreArgument)>>(
          'StartGrpcServer');
  late final _StartGrpcServer =
      _StartGrpcServerPtr.asFunction<int Function(CoreArgument)>();

  int StopGrpcServer() {
    return _StopGrpcServer();
  }

  late final _StopGrpcServerPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('StopGrpcServer');
  late final _StopGrpcServer = _StopGrpcServerPtr.asFunction<int Function()>();

  FfiData InvokeBackend(
    ffi.Pointer<ffi.Char> method,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _InvokeBackend(
      method,
      data,
      dataLen,
    );
  }

  late final _InvokeBackendPtr = _lookup<
      ffi.NativeFunction<
          FfiData Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Void>,
              ffi.LongLong)>>('InvokeBackend');
  late final _InvokeBackend = _InvokeBackendPtr.asFunction<
      FfiData Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Void>, int)>();

  FfiData InvokeBackendWithMeta(
    ffi.Pointer<ffi.Char> method,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
    ffi.Pointer<ffi.Void> metaData,
    int metaLen,
  ) {
    return _InvokeBackendWithMeta(
      method,
      data,
      dataLen,
      metaData,
      metaLen,
    );
  }

  late final _InvokeBackendWithMetaPtr = _lookup<
      ffi.NativeFunction<
          FfiData Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>,
              ffi.LongLong,
              ffi.Pointer<ffi.Void>,
              ffi.LongLong)>>('InvokeBackendWithMeta');
  late final _InvokeBackendWithMeta = _InvokeBackendWithMetaPtr.asFunction<
      FfiData Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int)>();

  void FreeFfiData(
    ffi.Pointer<ffi.Void> data,
  ) {
    return _FreeFfiData(
      data,
    );
  }

  late final _FreeFfiDataPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'FreeFfiData');
  late final _FreeFfiData =
      _FreeFfiDataPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void RegisterDartCallback(
    InvokeDartCallback callback,
  ) {
    return _RegisterDartCallback(
      callback,
    );
  }

  late final _RegisterDartCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(InvokeDartCallback)>>(
          'RegisterDartCallback');
  late final _RegisterDartCallback =
      _RegisterDartCallbackPtr.asFunction<void Function(InvokeDartCallback)>();

  void SendFfiResponse(
    int requestId,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _SendFfiResponse(
      requestId,
      data,
      dataLen,
    );
  }

  late final _SendFfiResponsePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.LongLong, ffi.Pointer<ffi.Void>,
              ffi.LongLong)>>('SendFfiResponse');
  late final _SendFfiResponse = _SendFfiResponsePtr.asFunction<
      void Function(int, ffi.Pointer<ffi.Void>, int)>();

  void RegisterStreamCallback(
    StreamCallback callback,
  ) {
    return _RegisterStreamCallback(
      callback,
    );
  }

  late final _RegisterStreamCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(StreamCallback)>>(
          'RegisterStreamCallback');
  late final _RegisterStreamCallback =
      _RegisterStreamCallbackPtr.asFunction<void Function(StreamCallback)>();

  int InvokeBackendServerStream(
    ffi.Pointer<ffi.Char> method,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _InvokeBackendServerStream(
      method,
      data,
      dataLen,
    );
  }

  late final _InvokeBackendServerStreamPtr = _lookup<
      ffi.NativeFunction<
          ffi.LongLong Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Void>,
              ffi.LongLong)>>('InvokeBackendServerStream');
  late final _InvokeBackendServerStream =
      _InvokeBackendServerStreamPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Void>, int)>();

  int InvokeBackendClientStream(
    ffi.Pointer<ffi.Char> method,
  ) {
    return _InvokeBackendClientStream(
      method,
    );
  }

  late final _InvokeBackendClientStreamPtr =
      _lookup<ffi.NativeFunction<ffi.LongLong Function(ffi.Pointer<ffi.Char>)>>(
          'InvokeBackendClientStream');
  late final _InvokeBackendClientStream = _InvokeBackendClientStreamPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int InvokeBackendBidiStream(
    ffi.Pointer<ffi.Char> method,
  ) {
    return _InvokeBackendBidiStream(
      method,
    );
  }

  late final _InvokeBackendBidiStreamPtr =
      _lookup<ffi.NativeFunction<ffi.LongLong Function(ffi.Pointer<ffi.Char>)>>(
          'InvokeBackendBidiStream');
  late final _InvokeBackendBidiStream = _InvokeBackendBidiStreamPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>)>();

  int SendStreamData(
    int streamId,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _SendStreamData(
      streamId,
      data,
      dataLen,
    );
  }

  late final _SendStreamDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.LongLong, ffi.Pointer<ffi.Void>,
              ffi.LongLong)>>('SendStreamData');
  late final _SendStreamData = _SendStreamDataPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, int)>();

  void CloseStream(
    int streamId,
  ) {
    return _CloseStream(
      streamId,
    );
  }

  late final _CloseStreamPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
          'CloseStream');
  late final _CloseStream = _CloseStreamPtr.asFunction<void Function(int)>();

  void CloseStreamInput(
    int streamId,
  ) {
    return _CloseStreamInput(
      streamId,
    );
  }

  late final _CloseStreamInputPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
          'CloseStreamInput');
  late final _CloseStreamInput =
      _CloseStreamInputPtr.asFunction<void Function(int)>();

  void StreamReady(
    int streamId,
  ) {
    return _StreamReady(
      streamId,
    );
  }

  late final _StreamReadyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
          'StreamReady');
  late final _StreamReady = _StreamReadyPtr.asFunction<void Function(int)>();

  FfiData CacheGet(
    ffi.Pointer<ffi.Char> storeName,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _CacheGet(
      storeName,
      key,
    );
  }

  late final _CacheGetPtr = _lookup<
      ffi.NativeFunction<
          FfiData Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('CacheGet');
  late final _CacheGet = _CacheGetPtr.asFunction<
      FfiData Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int CachePut(
    ffi.Pointer<ffi.Char> storeName,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
    int ttlSeconds,
  ) {
    return _CachePut(
      storeName,
      key,
      data,
      dataLen,
      ttlSeconds,
    );
  }

  late final _CachePutPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>, ffi.LongLong, ffi.LongLong)>>('CachePut');
  late final _CachePut = _CachePutPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Void>, int, int)>();

  int CacheContains(
    ffi.Pointer<ffi.Char> storeName,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _CacheContains(
      storeName,
      key,
    );
  }

  late final _CacheContainsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('CacheContains');
  late final _CacheContains = _CacheContainsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int CacheDelete(
    ffi.Pointer<ffi.Char> storeName,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _CacheDelete(
      storeName,
      key,
    );
  }

  late final _CacheDeletePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('CacheDelete');
  late final _CacheDelete = _CacheDeletePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();
}

/// Server startup arguments
final class CoreArgument extends ffi.Struct {
  external ffi.Pointer<ffi.Char> storagePath;

  external ffi.Pointer<ffi.Char> cachePath;

  external ffi.Pointer<ffi.Char> engineSocketPath;

  external ffi.Pointer<ffi.Char> engineTcpPort;

  external ffi.Pointer<ffi.Char> viewSocketPath;

  external ffi.Pointer<ffi.Char> viewTcpPort;

  external ffi.Pointer<ffi.Char> token;

  @ffi.Int()
  external int enableCache;

  @ffi.LongLong()
  external int streamTimeout;
}

/// FFI data structure for returning bytes
final class FfiData extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @ffi.LongLong()
  external int len;
}

/// Dart callback signature
typedef InvokeDartCallback = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(ffi.LongLong requestId, ffi.Pointer<ffi.Char> method,
            ffi.Pointer<ffi.Void> data, ffi.LongLong len)>>;

/// Stream callback signature (for server/bidi streaming)
typedef StreamCallback = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Void Function(ffi.LongLong streamId, ffi.Char msgType,
            ffi.Pointer<ffi.Void> data, ffi.LongLong len)>>;
typedef GoInt64 = ffi.LongLong;
typedef DartGoInt64 = int;
typedef GoInt = GoInt64;
